feat: created call schedule

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>專案自動外撥監控面板 - 二代</title>
+    <title>BonSale 自動外撥面板</title>
   </head>
   <body>
     <div id="root"></div>
